# SpotifyCPP-esp

./: CMakeLists.txt  LICENSE  README.md  library.json  library.properties
docs/: Authentication.md  index.md  todo.md
docs/Types/: Enums.md  index.md
docs/Types/DataModels/: BaseModels.md  PlayerModels.md  PlaylistModels.md  ResourceModels.md  SearchModels.md  UserModels.md
docs/Utilities/: Parsing.md
examples/: CMakeLists.txt  ExampleUtils.hpp
examples/albums/: getAlbumExample.cpp  getAlbumTracksExample.cpp  getUserAlbumsExample.cpp  newReleaseExample.cpp  removeAlbumForUserExample.cpp  saveAlbumForUserExample.cpp
examples/artists/: getArtistExample.cpp  getArtistTopTracksExample.cpp  getArtistsAlbumsExample.cpp
examples/audiobooks/: saveAudiobookForUser.cpp
examples/auth/: authManualExample.cpp  authServerExample.cpp
examples/browse/: searchExample.cpp
examples/categories/: getMultipleCategoriesExample.cpp  getSingleCategoryExample.cpp
examples/endpoints/albums/: getAlbumExample.cpp
examples/episodes/: saveEpisodeForUserExample.cpp
examples/player/: currentTrackExample.cpp  playbackExample.cpp
examples/realworld/: playback_control.cpp  playlist_management.cpp
examples/tracks/: getTrackExample.cpp  getUserTracksExample.cpp  removeTrackForUserExample.cpp  saveTrackForUserExample.cpp
include/spotify/: SpotifyVersion.hpp  extensions.hpp  spotify.hpp
include/spotify/api/: AlbumAPI.hpp  ArtistAPI.hpp  AudiobookAPI.hpp  BaseAPI.hpp  BrowseAPI.hpp  CategoryAPI.hpp  ChapterAPI.hpp  EpisodeAPI.hpp  PlayerAPI.hpp  PlaylistAPI.hpp  ShowsAPI.hpp  TrackAPI.hpp  UsersAPI.hpp
include/spotify/auth/: Auth.hpp  AuthServer.h  AuthServer.hpp
include/spotify/core/: Client.hpp  Endpoints.hpp  Errors.hpp
include/spotify/extensions/: VisualAPI.hpp  VisualModels.hpp
include/spotify/models/: AuthModels.hpp  BaseModels.hpp  PlayerModels.hpp  PlaylistModels.hpp  ResourceModels.hpp  Scopes.hpp  SearchModels.hpp  Types.hpp  UserModels.hpp
include/spotify/util/: Http.hpp  JsonMapping.hpp  Scopes.hpp  SpotifyEnums.hpp  Tools.hpp  Types.h  base64.hpp
include/spotify/util/parse/: InternalHelpers.hpp
src/: main.cpp
src/api/: AlbumAPI.cpp  ArtistAPI.cpp  AudiobookAPI.cpp  BaseAPI.cpp  BrowseAPI.cpp  CategoryAPI.cpp  ChapterAPI.cpp  EpisodeAPI.cpp  PlayerAPI.cpp  PlaylistAPI.cpp  ShowsAPI.cpp  TrackAPI.cpp  UsersAPI.cpp
src/auth/: Auth.cpp  AuthServer.cpp
src/core/: Client.cpp
src/extensions/: VisualAPI.cpp
src/util/: Http.cpp  JsonMapping.cpp  Tools.cpp
